<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr04.cocox.GameActivity">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <Button
        android:id="@+id/memory"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/button_games_shadow"
        android:drawableTop="@drawable/games_memory"
        android:text="@string/memory"
        android:textColor="@color/inactiveText"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/puzzle"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/button_games_shadow"
        android:drawableTop="@drawable/games_puzzle"
        android:text="@string/puzzle"
        android:textColor="@color/inactiveText"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/quiz"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/button_games_shadow"
        android:drawableTop="@drawable/games_memory"
        android:text="@string/quiz"
        android:textColor="@color/inactiveText"
        android:textSize="16sp" />

    <Button
        android:id="@+id/balloon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/button_games_shadow"
        android:drawableTop="@drawable/games_balloon"
        android:text="@string/balloon"
        android:textColor="@color/inactiveText"
        android:textSize="16sp" />

    </GridLayout>

    <ImageButton
        android:id="@+id/retur"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055"
        app:srcCompat="@drawable/back_btn" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/home" />

    <Button
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="628dp"
        android:background="@color/callcolor"
        android:drawableLeft="@mipmap/bell"
        android:drawableRight="@mipmap/bell"
        android:paddingLeft="180dp"
        android:paddingRight="180dp"
        android:text="@string/call"
        android:textColor="@color/inactiveText"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
