<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr04.cocox.DialogueActivity"
    tools:layout_editor_absoluteY="89dp">


    <ImageButton
        android:id="@+id/retur"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089"
        app:srcCompat="@drawable/nyretur" />


    <ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075"
        app:srcCompat="@drawable/nyhome" />


    <ImageButton
        android:id="@+id/call"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:scaleX="1.80"
        android:scaleY="1.60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/nykaldbar" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/answer"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_inactive_shadow"
            android:drawableTop="@drawable/mood_content_selector"
            android:text="@string/answer"
            android:textColor="@color/inactiveText"
            android:textSize="16sp" />


        <Button
            android:id="@+id/keyboard"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_inactive_shadow"
            android:drawableTop="@drawable/mood_happy_selector"
            android:text="@string/keyboard"
            android:textColor="@color/inactiveText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/pain"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_inactive_shadow"
            android:drawableTop="@drawable/mood_bored_selector"
            android:text="@string/pain"
            android:textColor="@color/inactiveText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/mood"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_inactive_shadow"
            android:drawableTop="@drawable/mood_tired_selector"
            android:text="@string/mood"
            android:textColor="@color/inactiveText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/questions"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_inactive_shadow"
            android:drawableTop="@drawable/mood_breathe_selector"
            android:text="@string/questions"
            android:textColor="@color/inactiveText"
            android:textSize="16sp" />

        <Button
            android:id="@+id/activity"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_inactive_shadow"
            android:drawableTop="@drawable/mood_frustrated_selector"
            android:text="@string/activities"
            android:textColor="@color/inactiveText"
            android:textSize="16sp" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
