<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr04.cocox.AnswerActivity">

    <ImageButton
        android:id="@+id/retur"
        android:layout_width="103dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999"
        app:srcCompat="@drawable/nyretur" />


    <ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002"
        app:srcCompat="@drawable/nyhome" />


    <ImageButton
        android:id="@+id/call"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:scaleX="1.80"
        android:scaleY="1.60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/nykaldbar" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <Button
        android:id="@+id/yes"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/dialogue_inactive_shadow"
        android:drawableTop="@drawable/selector_answer_yes"
        android:text="@string/yes"
        android:textColor="@color/inactiveText"
        android:textSize="20sp" />


    <Button
        android:id="@+id/no"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/dialogue_inactive_shadow"
        android:drawableTop="@drawable/selector_answer_no"
        android:text="@string/no"
        android:textColor="@color/inactiveText"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dontknow"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/dialogue_inactive_shadow"
        android:drawableTop="@drawable/selector_answer_dontknow"
        android:text="@string/dontknow"
        android:textColor="@color/inactiveText"
        android:textSize="16sp" />

    <Button
        android:id="@+id/thanks"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/dialogue_inactive_shadow"
        android:drawableTop="@drawable/selector_answer_thanks"
        android:text="@string/thanks"
        android:textColor="@color/inactiveText"
        android:textSize="20sp" />

    <Button
        android:id="@+id/later"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/dialogue_inactive_shadow"
        android:drawableTop="@drawable/selector_answer_later"
        android:text="@string/later"
        android:textColor="@color/inactiveText"
        android:textSize="20sp" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
